test/Fail/Issue7998VariableOverlap.err
Issue7998VariableOverlap.agda:6.3: error: [ParseError]
overlap<ERROR>  {{X}} : Set

-- WAS: 'overlap...
